--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap");
+* {
+  font-family: "Nunito", sans-serif;
+  margin: 0;
+  padding: 0;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+  max-width: 100%;
+  display: block;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html {
+  font-size: 1vw;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header_logo {
+  height: auto;
+  max-width: 10.41rem;
+  width: 100%;
+}
+.header_logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.header_grid {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+ul.header_nav_grid {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  list-style: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li.header_nav_items a {
+  color: #000;
+  text-decoration: none;
+  display: block;
+  font-weight: 600;
+  font-size: 0.9rem;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+}
+.container {
+  padding: 0 2.34rem;
+  margin: 0 auto;
+}
+header.header_wrapper {
+  padding: 1.56rem 0;
+}
+.hero_banner_image {
+  max-width: 100%;
+  position: relative;
+  padding-bottom: 36.45rem;
+  width: 100%;
+}
+.hero_banner_image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.hero_banner_grid {
+  position: relative;
+}
+.hero_banner_content {
+  position: absolute;
+  top: 3.12rem;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.hero_banner_title {
+  max-width: 46.87rem;
+  font-size: 3.95rem;
+  line-height: 1;
+  color: #fff;
+  font-weight: 400;
 }
